<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />

        <!--  Email Label -->
        <TextView
            android:id="@+id/txtDificultad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/strSeleccionaDif"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            >
            <RadioGroup
                android:id="@+id/btng_piezas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDificultad"
                android:layout_centerInParent="true"
                >
                <RadioButton
                    android:id="@+id/rdb_4piezas"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/str_4piezas"
                    android:layout_marginTop="10dp"
                    />
                <RadioButton
                    android:id="@+id/rdb_8piezas"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/str_8piezas"
                    android:layout_marginTop="10dp"
                    />
                <RadioButton
                    android:id="@+id/rdb_16piezas"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/str_16piezas"
                    android:layout_marginTop="10dp"
                    />

            </RadioGroup>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_jugar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:padding="12dp"
            android:text="@string/str_jugar"
            android:theme="@style/MyButton4"
            android:layout_below="@id/btng_piezas"
            />
    </LinearLayout>
</ScrollView>
